# local-gui-seed-gotham

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  prepare_assets.sh
api/: Cargo.toml
api/src/: bin.rs  lib.rs  main.rs
api/src/api/: assets.rs  counter.rs  mod.rs
api/src/data/: counter.rs  error.rs  mod.rs
app/: Cargo.toml
app/src/: main.rs
gui/: Cargo.toml  index.html
gui/assets/: gui.js  gui_bg.wasm  index.html
gui/src/: lib.rs
shared/: Cargo.toml
shared/src/: lib.rs
