[package]
name = "api"
version = "0.1.0"
authors = ["Florian Warzecha <liketechnik@disroot.org>"]
edition = "2018"

[lib]
name = "api_lib"
path = "src/lib.rs"

[[bin]]
name = "api_bin"
path = "src/bin.rs"

[dependencies]
gotham = "0.4.0"
gotham_derive = "0.4.0"
serde = { version = "1.0.104", features = [ "derive" ] }
serde_json = "1.0.46"
hyper = "0.12"
mime = "0.3"
rust-embed = "5.5.0"
mime_guess = "2.0.3"

shared = { path = "../shared" }

